# plump

./: .gitignore  Cargo.toml  Makefile  README.md  plump.py  requirements-dev.txt  server.py
.github/workflows/: makefile.yml
.hypothesis/examples/01025aa1be952db4/: 0d6dee9a4b8c1d8e  0dd01e9ba8366345  105f02f12b09e337  185cb1dc56cd440e  243e74000a0d98bf  3076605dcb4dc85c  39e2ac8353a74431  489ab33d993287db  586c4c5d9bf1b11c  5ecbcd0d2c4dcd95  62e64a8869f796a7  69f7b56522b8a40e  750ea17ed761a7c7  8ae5002953a80e03  a979ea472bb7edd6  b297b41134c07f5b  d004c121733898ec  d2e856b5a79dfd82  d8205a977b3e2088  e6414a0ebaf1f988  f2c1a30be7817e15
.hypothesis/examples/075592e3382eb19c/: 1922dabcdd5e5229  1c40d60f3b8db2ba  56c2c2f890a3c24f  a60004af25fa638b  babfdb503155fa73  ce67fc5632176f55  d35d201095cc594c  f3c67bbe88331679
.hypothesis/examples/0b02223ff1a1aff8/: 1c757664df5d2d8f  5b598cfc71613fcf  e4aa4ecb43e41631
.hypothesis/examples/0bba21731c96440c/: 7a23e993bfab3ac9  e61f0e38df867ab7
.hypothesis/examples/0de361e26a1824ac/: 1d99ab53010acc8a  c1b7a353fbd49537
.hypothesis/examples/0e299e4c3c58df98/: 0835362ca844b351  1d0e80b42fa8a9c9  2dd2bc7ae58b7b46  365be4f73b1f1df5
.hypothesis/examples/1687213f5edd391b/: c86b029c418a4b87
.hypothesis/examples/168fb076b5e90c43/: 27af56d177e0c787
.hypothesis/examples/182438e2c9325155/: 721575c11a198b11  93f3a44716358f49  9c3d80d9e4b7e09d  cdb58c64818090df  d955901a3857fc79
.hypothesis/examples/1ca50b9ac516eafd/: 0160c54d9a29b427  329d632c0d7308fb  41cad05839265a71  52f54735a7fc7e9e  575ee6e92f6f2d54  5a252711e748a24f  66c8188d8e12f6bb  6baf06bf4f356e36  82d9cb86e5040c5e  925ad26d47ced2ee  b60d86c298a9be9c  c57062962a5fc24d  ed1b56ec58c5833e  efad5ed1714b0da1  f2f251d77ef6f14b  f48d7cba75f8b354
.hypothesis/examples/1d58507d0fe7a6b9/: ea81460bb84cfa60
.hypothesis/examples/2367dca4d98eddc7/: 09bcae59ae070da9  0a1cd681960ff3f4  12235120e103a47b  126168c7a5a65f6c  2a0d4e2f19ad0612  37e2197b0378b961  3a64de9c282fa723  52c0e3c23821d85e  5476e0b548604196  581cc0454dbae17c  5d25a5362c3d0395  624cf7321c1f2b6c  685cc72ea98c868d  68877fb3006725b0  6b8f244e0c5e0424  700f14cad882eeff  968169f15b4792c0  afcc357e6e7dd3c9  bf5db78bf3440065  c108154f549982fb  c9218392a1aea28e  c991b074f9938531  ceaee4b190a869dd
.hypothesis/examples/2bb66d50cb454686/: 11ad66b9299a6efb  2ea83eaa8e2fa6a7  37fb626214c1ae35  655fe6510da5879e  75b3f8b87a3a87d2  b93d295d77891fba  bc89507fa7ab992e  c87334f68282141c  de7b9fd238197289  fef6aec07ac12ff3
.hypothesis/examples/2c0e90f08aa38275/: 33e465e9562b7e5a
.hypothesis/examples/2dc1db9250976af5/: 5d65d4cc5e60338d
.hypothesis/examples/2fb7b7453166bf58/: 0941c9340bb3de35  1016a316fbc9d9fa  53b350937a0147f8  583d7ddfff9064da  6ea5b238c01fd5f8  758aff7178f35931  99aef96e54567bfc  a647825cc550fddc  ccc25b0b15a78415  e08847d1c9557e6c  f6002825ef4742af  fb874df58aeab32f
.hypothesis/examples/35d3d03509ec552f/: 03ae3fd7d0795db8  3e61a5ff9d7e579b  71967ce7010b566e  84c0c9f8ba3e2737  b2aebb3cc07b6378  bec978cdb8c60e90  e38d527a41a562a5  eebe5bd0c8292776  fbfd797a205bc546  fd37b8a519a759f6
.hypothesis/examples/40af5bd3b81056b3/: 8b90d6d79c5cadbe  d4bdba13dc76c107
.hypothesis/examples/460d4fad261729bb/: 4935ffec2d1bac3a  5bdd1a3f9eb5bdd2  a7f6296c1cf40670  (+3 more)
api/: Cargo.toml
api/langs/cpp/: protocol.cpp
api/langs/csharp/plump_message/: Card.cs  Message.cs  Player.cs  PlayerName.cs  PublicState.cs  TraitHelpers.cs  Trick.cs  plump_message.csproj
api/langs/java/plump_message/: Card.java  Message.java  Player.java  PlayerName.java  PublicState.java  TraitHelpers.java  Trick.java
api/langs/python/plump_message/: __init__.py
api/langs/typescript/: protocol.ts
api/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
playing_cards/: Cargo.toml
playing_cards/src/: helpers.rs  structs.rs
plump/: format.py  game.py  main.py  network.py
plump-rs/: Cargo.toml
plump-rs/proptest-regressions/: game.txt
plump-rs/src/: format.rs  game.rs  main.rs  message.rs  network.rs
protocol/: Cargo.toml
protocol/src/: format.rs  lib.rs  message.rs  structs.rs
server/: Cargo.toml
server/src/: format.rs  game.rs  main.rs  message.rs  network.rs
smart_client/: Cargo.toml
smart_client/src/: main.rs
src/: format.rs  game.rs  main.rs  message.rs  network.rs
tests/: test_game.py
web/: Cargo.toml  index.mjs  package-lock.json  package.json
web/public/: index.css  index.html
web/src/: main.rs
(+197 files in other folders)
