[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = [
    "derive",
    "std",
], default-features = false }
tokio = { version = "1.29.1", features = [
    "macros",
    "io-std",
    "net",
    "rt-multi-thread",
    "io-util",
], default-features = false }
