[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = [
    "derive",
    "std",
], default-features = false }
itertools = "0.10.5"
rand = { features = ["std_rng"], default-features = false, version = "0.8.5" }
serde = { version = "1.0.160", features = [
    "serde_derive",
], default-features = false }
serde_json = "1.0.96"

[dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.3.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
