[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.3.10", features = [
    "derive",
    "std",
], default-features = false }
itertools = { default-features = false, version = "0.10.5" }
rand = { default-features = false, version = "0.8.5" }
protocol = { path = "../protocol" }
tokio = { version = "1.29.1", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }
serde_json = "1.0.96"
playing_cards = { path = "../playing_cards" }
futures = "0.3.30"

[dev-dependencies]
proptest = "1.1.0"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
